# mqtt-client-boilerplate

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE.md  README.md  README_RU.md
a3voda/inc/: ActionListener.h  KBDHelper.h  LcdHelper.h  MQTTWrapper.h  Payment.h  PaymentSystem.h  Serializable.h  StateMachine.h  Utf8ToCp1251Converter.h  Windows1251Encoding.h
a3voda/inc/domain/: ActionListener.h  Payment.h  Serializable.h
a3voda/inc/logic/: PaymentSystem.h  StateMachine.h
a3voda/inc/mqtt/: MQTTWrapper.h
a3voda/inc/tools/: KBDHelper.h  Utf8ToCp1251Converter.h
a3voda/src/domain/: Payment.cpp  Serializable.cpp
a3voda/src/logic/: PaymentSystem.cpp  StateMachine.cpp
a3voda/src/mqtt/: MQTTWrapper.cpp
a3voda/src/tools/: KBDHelper.cpp  LcdHelper.cpp  Utf8ToCp1251Converter.cpp  Windows1251Encoding.cpp
cmake_modules/: FindA3voda.cmake
cmake_toolchains/: ubuntu-arm64.cmake
docs/: Doxyfile.in
inc/: MQTTTask.h  Main.h  MyPaymentSystem.h  Server.h
src/: MQTTTask.cpp  Main.cpp  MyPaymentSystem.cpp  Server.cpp
tests/src/: test.cpp
